Formatted recent additions

--- a/WT_Skript/WT_Script.tex
+++ b/WT_Skript/WT_Script.tex
@@ -1004,9 +1004,9 @@ $\mathbb{E}(X) = \sum_{i=1}^n x_i \frac{1}{n} = \frac{1}{n} \sum^n_{i=1}x_i$ ent
 	$$P(X=x,Y=y)=P(X=x)\cdot P(Y=y) \quad \forall x\in\Omega_X \text{ und } \forall y\in\Omega_Y $$
 	Umgekehrt impliziert (**) die Relation (*), d.h. das $X$ und $Y$ unabhängig sind. Wie sieht man das?
 	\begin{itemize}
-	\item $$x\in\Omega\longmapsto\rho_X (x):=P(X=x) \text{ ist die Gewichtsfunktion der Verteilung } P_X \text{ von } X$$
-	\item $$y\in\Omega_Y\longmapsto\rho_Y(y):=P(Y=y) \text{ ist die Gewichtsfunktion der Verteilung } P_Y \text{ von } Y$$
-	\item $$(x,y)\in\Omega_X \times \Omega_Y\longmapsto P(X=x,Y=y) \text{ ist die Gewichtsfunktion der Verteilung einer Zufallsvariable mit Werten aus } \Omega_X \times \Omega_Y$$
+	\item $x\in\Omega\longmapsto\rho_X (x):=P(X=x)$ ist die Gewichtsfunktion der Verteilung  $P_X$ von $X$
+	\item $y\in\Omega_Y\longmapsto\rho_Y(y):=P(Y=y)$ ist die Gewichtsfunktion der Verteilung $P_Y$ von $Y$
+	\item $(x,y)\in\Omega_X \times \Omega_Y\longmapsto P(X=x,Y=y)$ ist die Gewichtsfunktion der Verteilung einer Zufallsvariable mit Werten aus $\Omega_X \times \Omega_Y$
 	\end{itemize}
 	\subsection{Lemma Unabhängigkeit}
 	Unter der Voraussetzung aus der Definition Unabhängige Zufallsvariablen (siehe 6.2) sind zwei Zufallsvariablen $X$ und $Y$ auf $(\Omega,\mathcal{P}(\Omega),P)$ unabhängig genau dann, wenn für jedes $x\in\Omega_X$ und jedes $y\in\Omega_Y$ gilt
@@ -1061,8 +1061,8 @@ $\mathbb{E}(X) = \sum_{i=1}^n x_i \frac{1}{n} = \frac{1}{n} \sum^n_{i=1}x_i$ ent
  	\paragraph{Formaler Rahmen:}
  	$(\Omega,\mathcal{P}(\Omega),P)$ diskretes W-Raum
  	\begin{itemize}
- 	\item[Gegeben:] $A,B\subseteq\Omega$ zwei Ereignisse
- 	\item[Annahme:] $P(A)>0$
+ 	\item[] \emph{Gegeben}: $A,B\subseteq\Omega$ zwei Ereignisse
+ 	\item[] \emph{Annahme}: $P(A)>0$
  	\end{itemize}
  	 	
  	
